--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,7 @@ android {
     lint {
         disable 'InvalidPackage', 'MissingTranslation', 'ResourceType'
     }
+    namespace 'nl.mpcjanssen.simpletask'
 
 
 }
@@ -121,17 +122,18 @@ android {
 
 repositories {
     jcenter()
+    mavenCentral()
     maven { url "https://jitpack.io" }
     maven { url "https://maven.google.com" }
     google()
 }
 
 dependencies {
+    implementation "androidx.preference:preference-ktx:1.2.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     dropboxImplementation 'com.dropbox.core:dropbox-core-sdk:5.2.0'
-    implementation 'org.jetbrains.anko:anko-commons:0.10.8'
     nextcloudImplementation 'com.github.nextcloud:android-library:1.6.1'
     nextcloudImplementation 'com.google.code.gson:gson:2.9.0'
-    implementation "org.jetbrains.anko:anko-commons:0.10.8"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation 'androidx.core:core:1.7.0'
@@ -146,7 +148,6 @@ dependencies {
     implementation 'com.atlassian.commonmark:commonmark:0.11.0'
     implementation 'com.darwinsys:hirondelle-date4j:1.5.1'
     implementation 'org.luaj:luaj-jse:3.0.1'
-    implementation 'me.smichel.android:kpreferences:0.11.1'
     implementation 'androidx.multidex:multidex:2.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
